flux/clusters/homelab/infrastructure/prometheus-operator/grafana-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: prometheus
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-operator
    app.kubernetes.io/component: grafana
spec:
  type: NodePort
  ports:
  - name: service
    port: 80
    targetPort: 3000
    nodePort: 31080
    protocol: TCP
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-operator
