flux/clusters/homelab/infrastructure/prometheus-operator/prometheus-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus-operator
    app.kubernetes.io/component: prometheus
spec:
  type: NodePort
  ports:
  - name: web
    port: 9090
    targetPort: 9090
    nodePort: 31090
    protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus-operator-kube-p-prometheus
