flux/clusters/homelab/infrastructure/prometheus-operator/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "test.lucena.cloud"
    # Temporarily disable HTTPS redirect for ACME challenges
    # tls:
    #   httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "test.lucena.cloud"
    tls:
      mode: SIMPLE
      credentialName: grafana-tls
